fix: overflowing text

--- a/frontend/src/styles/upload_page.scss
+++ b/frontend/src/styles/upload_page.scss
@@ -40,6 +40,7 @@
                 overflow: auto;
                 margin-bottom: 0.45rem;
                 width: fit-content;
+                max-width: 100%;
             }
         }
 
